--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     <!-- sezione 2 -->
 
     <!-- sezione 3 -->
-    <section_pt> </section_pt>
+    <section_pt>
+      <div class="container"></div>
+    </section_pt>
     <!-- sezione 3 -->
   </body>
 </html>
