--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         <div class="row justify-content-center">
           <div class="col-4 black"></div>
         </div>
-        <div class="row row-cols-1 justify-content-center">
-          <div class="col white"></div>
-          <div class="col white"></div>
-          <div class="col white"></div>
+        <div class="row justify-content-center">
+          <div class="col-4 white"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-4 white"></div>
         </div>
       </div>
     </section_p1>
@@ -40,27 +41,24 @@
     <!-- sezione 2 -->
     <section_pd>
       <div class="container-fluid pink">
-        <div class="row row-cols-1 justify-content-center">
-          <div class="col white"></div>
-          <div class="col white"></div>
+        <div class="row justify-content-center">
+          <div class="col-4 white"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-4 white"></div>
         </div>
         <div class="container">
           <div class="row">
             <div class="col-12 purple"></div>
-          </div>
-          <div class="row">
+
             <div class="col-12 purple"></div>
-          </div>
-          <div class="row">
+
             <div class="col-12 purple"></div>
-          </div>
-          <div class="row">
+
             <div class="col-12 purple"></div>
-          </div>
-          <div class="row">
+
             <div class="col-12 purple"></div>
-          </div>
-          <div class="row">
+
             <div class="col-12 purple"></div>
           </div>
         </div>
@@ -70,8 +68,63 @@
 
     <!-- sezione 3 -->
     <section_pt>
-      <div class="container"></div>
+      <div class="container-fluid azure">
+        <div class="row justify-content-center">
+          <div class="col-4 white"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-4 white"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-8 brown"></div>
+          <div class="col-8 brown"></div>
+        </div>
+      </div>
     </section_pt>
     <!-- sezione 3 -->
+    <!-- sezione 4 -->
+    <section_pq>
+      <div class="container-fluid yellow">
+        <div class="row justify-content-center">
+          <div class="col-4 white"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-4 white"></div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-7 white"></div>
+            <div class="col-7 white"></div>
+            <div class="col-7 white"></div>
+            <div class="col-7 white"></div>
+        </div>
+        <div class="row justify-content-center" >
+            <div class="col-5 red mar"></div>
+      </div>
+    </section_pq>
+    <!-- sezione 4 -->
+    <!-- footer -->
+    <footer>
+      <div class="container-fluid azure ">
+        <div class="row">
+          <div class="offset-5 col-2 white"></div>
+          <div class="offset-4 col-4 white"></div>
+        </div>
+        <div class="row justify-content-center mar">
+          <div class="col-6 orange"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-2 orange"></div>
+          <div class="col-2 orange"></div>
+          <div class="col-2 orange"></div>
+          <div class="col-2 orange"></div>
+        </div>
+        <div class="row justify-content-center mar">
+          <div class="col-6 orange"></div>
+        </div>
+        <div class="row justify-content-center ">
+          <div class="col-10 white"></div>
+        </div>
+    </footer>
+    <!-- footer -->
   </body>
 </html>
