--- a/index.html
+++ b/index.html
@@ -47,19 +47,27 @@
         <div class="row justify-content-center">
           <div class="col-4 white"></div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-12 purple"></div>
-
-            <div class="col-12 purple"></div>
-
-            <div class="col-12 purple"></div>
-
-            <div class="col-12 purple"></div>
-
-            <div class="col-12 purple"></div>
-
-            <div class="col-12 purple"></div>
+        
+        <div class="container mt-5 px-4">
+          <div class="row gy-3 gx-3">
+            <div class="col-12  col-md-6 col-lg-4">
+              <div class="p-5 border bg-light"></div>
+            </div>
+            <div class="col-12 col-md-6  col-lg-4">
+              <div class="p-5 border bg-light"></div>
+            </div>
+            <div class="col-12  col-md-6  col-lg-4">
+              <div class="p-5 border bg-light"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="p-5 border bg-light"></div>
+            </div>
+            <div class="col-12  col-md-6  col-lg-4">
+              <div class="p-5 border bg-light"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="p-5 border bg-light"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -75,9 +83,16 @@
         <div class="row justify-content-center">
           <div class="col-4 white"></div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-8 brown"></div>
-          <div class="col-8 brown"></div>
+        <div class="row justify-content-center mt-5 gx-5">
+          <div class="col-8 col-md-4">
+            <div class="p-5 border bg-light"></div>
+          </div>
+          <div class="col-8 col-md-4">
+            <div class="p-5 border bg-light"></div>
+          </div>
+        </div>
+        <div class="row justify-contnt-center mt-5">
+          <div class="offset-5 col-2 white"></div>
         </div>
       </div>
     </section_pt>
@@ -103,7 +118,7 @@
     </section_pq>
     <!-- sezione 4 -->
     <!-- footer -->
-    <footer>
+    <!-- <footer>
       <div class="container-fluid azure ">
         <div class="row">
           <div class="offset-5 col-2 white"></div>
@@ -124,7 +139,7 @@
         <div class="row justify-content-center ">
           <div class="col-10 white"></div>
         </div>
-    </footer>
+    </footer> -->
     <!-- footer -->
   </body>
 </html>
