--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,15 +27,26 @@
     <section_p1>
       <div class="container-fluid azure">
         <div class="row justify-content-center">
-          <div class="col-4 black"></div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-4 white"></div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-4 white"></div>
+          <div class="col-7">
+            <div class="card border-0">
+              <img src="img/avatar.svg" class="azure" alt="...">
+            </div>
+            <div class="card-boot text-center mt-3 mb-3">
+              <h2>START BOOTSTRAP</h2>
+            </div>
+            <div class="card-boot text-center mt-3 mb-3">
+              <span class=><i class="fa-solid fa-star "></i></span>
+            </div>
+          </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-10">
+          <div class="card-boot  text-center mb-3">
+            <span>GRAPHIC ARTIST - WEB DEIGNER - ILLUSTRATOR</span>
+          </div>
         </div>
       </div>
+    </div>
     </section_p1>
     <!-- sezione1 -->
 
@@ -44,29 +56,29 @@
         <div class="row justify-content-center">
           <div class="col-4 white"></div>
         </div>
-        <div class="row justify-content-center">
+        <!-- <div class="row justify-content-center">
           <div class="col-4 white"></div>
-        </div>
+        </div> -->
         
-        <div class="container mt-5 px-4">
+        <div class="container mt-5">
           <div class="row gy-3 gx-3">
             <div class="col-12  col-md-6 col-lg-4">
-              <div class="p-5 border bg-light"></div>
+              <div class="p-5 bg-light"></div>
             </div>
             <div class="col-12 col-md-6  col-lg-4">
-              <div class="p-5 border bg-light"></div>
+              <div class="p-5 bg-light"></div>
             </div>
             <div class="col-12  col-md-6  col-lg-4">
-              <div class="p-5 border bg-light"></div>
+              <div class="p-5 bg-light"></div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-              <div class="p-5 border bg-light"></div>
+              <div class="p-5 bg-light"></div>
             </div>
             <div class="col-12  col-md-6  col-lg-4">
-              <div class="p-5 border bg-light"></div>
+              <div class="p-5 bg-light"></div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-              <div class="p-5 border bg-light"></div>
+              <div class="p-5 bg-light"></div>
             </div>
           </div>
         </div>
@@ -80,19 +92,21 @@
         <div class="row justify-content-center">
           <div class="col-4 white"></div>
         </div>
-        <div class="row justify-content-center">
+        <!-- <div class="row justify-content-center">
           <div class="col-4 white"></div>
-        </div>
+        </div> -->
         <div class="row justify-content-center mt-5 gx-5">
           <div class="col-8 col-md-4">
-            <div class="p-5 border bg-light"></div>
+            <div class="p-5 bg-light"></div>
           </div>
           <div class="col-8 col-md-4">
-            <div class="p-5 border bg-light"></div>
+            <div class="p-5 bg-light"></div>
           </div>
         </div>
-        <div class="row justify-contnt-center mt-5">
-          <div class="offset-5 col-2 white"></div>
+        <div class="row justify-content-center mt-5">
+          <div class="col-2">
+            <div class="p-3 bg-light mt-5"></div>
+          </div>
         </div>
       </div>
     </section_pt>
