--- a/index.html
+++ b/index.html
@@ -50,35 +50,49 @@
     </section_p1>
     <!-- sezione1 -->
 
-    <!-- sezione 2 -->
+    <!-- sezione2 -->
     <section_pd>
-      <div class="container-fluid pink">
+      <div class="container-fluid mb-5">
         <div class="row justify-content-center">
-          <div class="col-4 white"></div>
+          <div class="col-8">
+              <h4 class="text-center mt-3 mb-3">
+                PORTFOLIO</h4>
+              <div class="text-center mt-3 mb-3">
+                <i class="fa-solid fa-star "></i>
+              </div>
+           </div>
         </div>
-        <!-- <div class="row justify-content-center">
-          <div class="col-4 white"></div>
-        </div> -->
-        
-        <div class="container mt-5">
+        <div class="container">
           <div class="row gy-3 gx-3">
             <div class="col-12  col-md-6 col-lg-4">
-              <div class="p-5 bg-light"></div>
+              <div class="card-portfolio">
+                <img src="img/cabin.png" class=" rounded img-fluid" alt="...">
+              </div>
             </div>
             <div class="col-12 col-md-6  col-lg-4">
-              <div class="p-5 bg-light"></div>
+              <div class="card-portfolio">
+                <img src="img/cake.png" class="rounded img-fluid" alt="...">
+              </div>
             </div>
             <div class="col-12  col-md-6  col-lg-4">
-              <div class="p-5 bg-light"></div>
+              <div class="card-portfolio">
+                <img src="img/circus.png" class="rounded img-fluid" alt="...">
+              </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-              <div class="p-5 bg-light"></div>
+              <div class="card-portfolio">
+                <img src="img/game.png" class="rounded img-fluid" alt="...">
+              </div>
             </div>
             <div class="col-12  col-md-6  col-lg-4">
-              <div class="p-5 bg-light"></div>
+              <div class="card-portfolio">
+                <img src="img/safe.png" class=" rounded img-fluid" alt="...">
+              </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-              <div class="p-5 bg-light"></div>
+              <div class="card-portfolio">
+                <img src="img/submarine.png" class="rounded img-fluid" alt="...">
+              </div>
             </div>
           </div>
         </div>
