--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section_p1>
       <div class="container-fluid azure">
         <div class="row justify-content-center">
-          <div class="col-7">
+          <div class="col-8">
             <div class="card border-0">
               <img src="img/avatar.svg" class="azure" alt="...">
             </div>
@@ -104,22 +104,31 @@
     <section_pt>
       <div class="container-fluid azure">
         <div class="row justify-content-center">
-          <div class="col-4 white"></div>
+          <div class="col-8">
+            <h4 class="text-center mt-5">
+              ABOUT</h4>
+            <div class="text-center mt-3 mb-3">
+              <i class="fa-solid fa-star "></i>
+            </div>
+         </div>
         </div>
-        <!-- <div class="row justify-content-center">
-          <div class="col-4 white"></div>
-        </div> -->
-        <div class="row justify-content-center mt-5 gx-5">
+        <div class="row justify-content-center gx-3 gy-3">
           <div class="col-8 col-md-4">
-            <div class="p-5 bg-light"></div>
+            <div class="">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores omnis accusamus asperiores reiciendis dolor consequatur culpa maxime non aut numquam ipsum pariatur, atque ducimus, consequuntur quibusdam molestias minima ut iure?
+            </div>
           </div>
           <div class="col-8 col-md-4">
-            <div class="p-5 bg-light"></div>
+            <div class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, libero animi. Esse sint ipsum placeat, soluta non possimus repellendus debitis asperiores praesentium sit facere, labore saepe illum nemo minus harum.
+            </div>
           </div>
         </div>
-        <div class="row justify-content-center mt-5">
-          <div class="col-2">
-            <div class="p-3 bg-light mt-5"></div>
+        <div class="row justify-content-center mt-3">
+          <div class="col-4">
+            <div class=" download-button text-center mb-3">
+              <button type="button" class="btn"><i class="fa-solid fa-download"></i> Download</button>
+            </div>
           </div>
         </div>
       </div>
@@ -127,9 +136,14 @@
     <!-- sezione 3 -->
     <!-- sezione 4 -->
     <section_pq>
-      <div class="container-fluid yellow">
+      <div class="container-fluid ">
         <div class="row justify-content-center">
-          <div class="col-4 white"></div>
+          <div class="col-8">
+            <h4 class="text-center mt-5">
+              CONACT ME</h4>
+            <div class="text-center mt-3 mb-3">
+              <i class="fa-solid fa-star "></i>
+          </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-4 white"></div>
