--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section_pd>
       <div class="container-fluid mb-5">
         <div class="row justify-content-center">
-          <div class="col-8">
+          <div class="col-8 blue">
               <h4 class="text-center mt-3 mb-3">
                 PORTFOLIO</h4>
               <div class="text-center mt-3 mb-3">
@@ -102,7 +102,7 @@
 
     <!-- sezione 3 -->
     <section_pt>
-      <div class="container-fluid azure">
+      <div class="container-fluid azure white">
         <div class="row justify-content-center">
           <div class="col-8">
             <h4 class="text-center mt-5">
@@ -127,7 +127,7 @@
         <div class="row justify-content-center mt-3">
           <div class="col-4">
             <div class=" download-button text-center mb-3">
-              <button type="button" class="btn"><i class="fa-solid fa-download"></i> Download</button>
+              <button type="button" class="white border btn"><i class="fa-solid fa-download"></i> Download</button>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
     <section_pq>
       <div class="container-fluid ">
         <div class="row justify-content-center">
-          <div class="col-8">
+          <div class="col-8 blue">
             <h4 class="text-center mt-5">
               CONACT ME</h4>
             <div class="text-center mt-3 mb-3">
