--- a/index.html
+++ b/index.html
@@ -14,37 +14,52 @@
     <title>bootstrap freelancer</title>
   </head>
   <body>
-    <header_top>
-      <div class="container-fluid">
-        <div class="row red justify-content-between">
-          <div class="col-2 blue"></div>
-          <div class="col-1 blue"></div>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid mx-3">
+          <a class="navbar-brand fw-bold text-white " href="#">START BOOTSTRAP</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </header_top>
+      </nav>
+    </header>
 
     <!-- sezione1 -->
     <section_p1>
       <div class="container-fluid azure">
         <div class="row justify-content-center">
-          <div class="col-8">
-            <div class="card border-0">
+          <div class="col-4 col-md-2">
+            <div class="card jumbo border-0">
               <img src="img/avatar.svg" class="azure" alt="...">
             </div>
+           </div>
+           <div class="row justify-content-center">
+           <div class="col-10">
             <div class="card-boot text-center mt-3 mb-3">
               <h2>START BOOTSTRAP</h2>
             </div>
             <div class="card-boot text-center mt-3 mb-3">
               <span class=><i class="fa-solid fa-star "></i></span>
             </div>
-          </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-10">
-          <div class="card-boot  text-center mb-3">
-            <span>GRAPHIC ARTIST - WEB DEIGNER - ILLUSTRATOR</span>
-          </div>
-        </div>
+            <div class="card-boot text-center mb-3">
+              <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
+            </div>
+           </div>
+           </div>
       </div>
     </div>
     </section_p1>
@@ -149,10 +164,10 @@
           <div class="col-4 white"></div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-7 white"></div>
-            <div class="col-7 white"></div>
-            <div class="col-7 white"></div>
-            <div class="col-7 white"></div>
+            <div class="col-7"></div>
+            <div class="col-7"></div>
+            <div class="col-7"></div>
+            <div class="col-7"></div>
         </div>
         <div class="row justify-content-center" >
             <div class="col-5 red mar"></div>
@@ -183,5 +198,13 @@
         </div>
     </footer> -->
     <!-- footer -->
+
+
+
+
+
+    <!-- inclusione parte js di bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
   </body>
 </html>
