--- a/index.html
+++ b/index.html
@@ -158,19 +158,47 @@
               CONACT ME</h4>
             <div class="text-center mt-3 mb-3">
               <i class="fa-solid fa-star "></i>
-          </div>
+            </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-4 white"></div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-8">
+          <form>
+            <div class="row ">
+              <label class="col-3"></label>
+              <div class="col-10">
+                <input type="text" class="form-control border-0 border-bottom" placeholder="Name" id="input-name">
+              </div>
+            </div>
+            <div class="row ">
+              <label class="col-3"></label>
+              <div class="col-10">
+                <input type="email" class="form-control border-0 border-bottom" placeholder="Email Address" id="inputEmail3">
+              </div>
+            </div>
+            <div class="row ">
+              <label class="col-3"></label>
+              <div class="col-10">
+                <input type="text" class="form-control border-0 border-bottom" placeholder="Phone-number" id="input-name">
+              </div>
+            </div>
+              <div class="row ">
+                <label class="col-3 "></label>
+                <div class="col-10">
+                  <textarea class="form-control border-0 border-bottom" placeholder="Message" aria-label="With textarea"></textarea>
+                </div>
+                </div>
+            <div class="row mt-4">
+              <div class="col-3">
+                <div class="col-10">
+               <button type="submit" class="btn btn-primary azure border-0">Send</button>
+              </div>
+              </div>
+            </div>
+              </div>
+          </form>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-7"></div>
-            <div class="col-7"></div>
-            <div class="col-7"></div>
-            <div class="col-7"></div>
-        </div>
-        <div class="row justify-content-center" >
-            <div class="col-5 red mar"></div>
+      </div>
       </div>
     </section_pq>
     <!-- sezione 4 -->
